fix z-index

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -36,9 +36,4 @@ button {
   border: none;
 }
 
-a {
-  text-decoration: none;
-  &:visited {
-    color: blue;
-  }
-}
+ 
